--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ h1{
 <body>
 
 <div class="card">
-    <h1>Czy zostaniesz moją walentynką? ❤️</h1>
+    <h1>Czy Monia zostaniesz moją walentynką? ❤️</h1>
 
     <div class="buttons">
         <button id="yesBtn">Tak</button>
